# poneglyph-discord-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
contracts/poneglyph/: openapi.json  search-syntax.md
docs/: architecture.md
docs/deployment/: discord.md  docker.md
docs/notes/: 2026-06-06-post-mvp-follow-ups.md
docs/superpowers/plans/: 2026-06-04-docker-ci-deployment.md  2026-06-04-slash-first-poneglyph-discord-bot.md
docs/superpowers/specs/: 2026-06-04-docker-ci-deployment-design.md  2026-06-04-slash-first-poneglyph-discord-bot-design.md
scripts/: refresh_poneglyph_contracts.py
src/optcg_card_bot/: __main__.py  bot.py  commands.py  config.py  contracts.py  embeds.py  errors.py  interactions.py  models.py  poneglyph.py  search.py
tests/: test_commands.py  test_config.py  test_container_files.py  test_contracts.py  test_deployment_docs.py  test_embeds.py  test_interactions.py  test_models.py  test_poneglyph.py  test_search.py  test_workflows.py
tests/fixtures/poneglyph/: card_op01_001.json  search_luffy.json  search_op01_001.json
tests/live/: test_live_poneglyph_contract.py
